Fixed load image jumping

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,6 +29,7 @@ $code-color: #bf616a;
 
 @mixin center-image {
   display: block;
-  width: 13em;
+  max-width: 13em;
+  min-height: 13em;
   margin: 1em auto 0 auto;
 }
